:recycle: Lots of Changes

--- a/InfoBuraco/InfoBuraco.vcxproj
+++ b/InfoBuraco/InfoBuraco.vcxproj
@@ -102,13 +102,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>.;.\Controller;.\DAO;C:\PCS\MySQLConnector\include\jdbc;C:\PCS\boost;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;.\Models;.\Controller;.\DAO;C:\PCS\MySQLConnector\include\jdbc;C:\PCS\boost;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>mysqlcppconn.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <EntryPointSymbol>Main</EntryPointSymbol>
-      <AdditionalLibraryDirectories>C:\PCS\MySQLConnector\lib64\vs14;C:\PCS\boost\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\PCS\MySQLConnector\lib64\vs14;C:\PCS\boost\stage\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -137,13 +137,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Cidadao.cpp" />
     <ClCompile Include="Controller\CidadaoController.cpp" />
+    <ClCompile Include="Controller\NotificacaoController.cpp" />
     <ClCompile Include="Controller\SecurityController.cpp" />
+    <ClCompile Include="DAO\BuracoDAO.cpp" />
     <ClCompile Include="DAO\CidadaoDAO.cpp" />
     <ClCompile Include="DAO\EquipamentoDAO.cpp" />
+    <ClCompile Include="DAO\NotificacaoDAO.cpp" />
     <ClCompile Include="DAO\UsuarioDAO.cpp" />
-    <ClCompile Include="Notificacao.cpp" />
+    <ClCompile Include="Models\Buraco.cpp" />
+    <ClCompile Include="Models\Cidadao.cpp" />
+    <ClCompile Include="Models\Notificacao.cpp" />
+    <ClCompile Include="Models\Usuario.cpp" />
     <ClCompile Include="TelaDashboard.cpp" />
     <ClCompile Include="DetalheOS.cpp" />
     <ClCompile Include="Equipamento.cpp" />
@@ -154,18 +159,21 @@
     <ClCompile Include="TelaListaNotificacao.cpp" />
     <ClCompile Include="TelaMaterial.cpp" />
     <ClCompile Include="TelaNotificacao.cpp" />
-    <ClCompile Include="TelaNovoBuraco.cpp" />
     <ClCompile Include="TelaNovoMaterial.cpp" />
-    <ClCompile Include="Usuario.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Cidadao.h" />
     <ClInclude Include="Controller\CidadaoController.h" />
+    <ClInclude Include="Controller\NotificacaoController.h" />
     <ClInclude Include="Controller\SecurityController.h" />
+    <ClInclude Include="DAO\BuracoDAO.h" />
     <ClInclude Include="DAO\CidadaoDAO.h" />
     <ClInclude Include="DAO\EquipamentoDAO.h" />
+    <ClInclude Include="DAO\NotificacaoDAO.h" />
     <ClInclude Include="DAO\UsuarioDAO.h" />
-    <ClInclude Include="Notificacao.h" />
+    <ClInclude Include="Models\Buraco.h" />
+    <ClInclude Include="Models\Cidadao.h" />
+    <ClInclude Include="Models\Notificacao.h" />
+    <ClInclude Include="Models\Usuario.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="TelaDashboard.h">
       <FileType>CppForm</FileType>
@@ -190,13 +198,9 @@
     <ClInclude Include="TelaNotificacao.h">
       <FileType>CppForm</FileType>
     </ClInclude>
-    <ClInclude Include="TelaNovoBuraco.h">
-      <FileType>CppForm</FileType>
-    </ClInclude>
     <ClInclude Include="TelaNovoMaterial.h">
       <FileType>CppForm</FileType>
     </ClInclude>
-    <ClInclude Include="Usuario.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
