--- a/InfoBuraco/InfoBuraco.vcxproj
+++ b/InfoBuraco/InfoBuraco.vcxproj
@@ -139,7 +139,9 @@
   <ItemGroup>
     <ClCompile Include="Controller\BuracoController.cpp" />
     <ClCompile Include="Controller\CidadaoController.cpp" />
+    <ClCompile Include="Controller\EquipamentoController.cpp" />
     <ClCompile Include="Controller\NotificacaoController.cpp" />
+    <ClCompile Include="Controller\OSController.cpp" />
     <ClCompile Include="Controller\SecurityController.cpp" />
     <ClCompile Include="DAO\BuracoDAO.cpp" />
     <ClCompile Include="DAO\CargoDAO.cpp" />
@@ -169,7 +171,9 @@
   <ItemGroup>
     <ClInclude Include="Controller\BuracoController.h" />
     <ClInclude Include="Controller\CidadaoController.h" />
+    <ClInclude Include="Controller\EquipamentoController.h" />
     <ClInclude Include="Controller\NotificacaoController.h" />
+    <ClInclude Include="Controller\OSController.h" />
     <ClInclude Include="Controller\SecurityController.h" />
     <ClInclude Include="DAO\BuracoDAO.h" />
     <ClInclude Include="DAO\CargoDAO.h" />
