List OS e Despzcho

--- a/InfoBuraco/InfoBuraco.vcxproj
+++ b/InfoBuraco/InfoBuraco.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="TelaListaDespachos.cpp" />
     <ClCompile Include="TelaListaMateriais.cpp" />
     <ClCompile Include="TelaListaNotificacao.cpp" />
+    <ClCompile Include="TelaListaOS.cpp" />
     <ClCompile Include="TelaNotificacao.cpp" />
     <ClCompile Include="TelaNovoDespacho.cpp" />
     <ClCompile Include="TelaNovoEquipamento.cpp" />
@@ -228,6 +229,9 @@
     <ClInclude Include="TelaListaNotificacao.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="TelaListaOS.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="TelaNotificacao.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -271,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="TelaListaNotificacao.resx">
       <DependentUpon>TelaListaNotificacao.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaListaOS.resx">
+      <DependentUpon>TelaListaOS.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TelaNotificacao.resx">
       <DependentUpon>TelaNotificacao.h</DependentUpon>
